--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=3000
 MONGO_URI=mongodb+srv://theaov201_db_user:TFdu3ulDL534z1oZ@cluster0.0douhqw.mongodb.net/?appName=Cluster0
+JWT_SECRET=skolar_secret_key
